cert-manager-sonarqube/sonar-ns.yaml
# sonar namespace
apiVersion: v1
kind: Namespace
metadata:
  name: sonar
  labels:
    app.kubernetes.io/instance: sonarqube
