cert-manager-sonarqube/sonar-app.yaml
# sonar deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar
  namespace: sonar
  labels:
    app: sonar
    app.kubernetes.io/instance: sonarqube
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonar
  template:
    metadata:
      labels:
        app: sonar
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:8.9.1-community
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: app-pvc
          mountPath: "/opt/sonarqube/data/"
          subPath: data
        - name: app-pvc
          mountPath: "/opt/sonarqube/extensions/"
          subPath: extensions
        resources:
          requests:
            memory: "1024Mi"
          limits:
            memory: "2048Mi"
      volumes:
      - name: app-pvc
        persistentVolumeClaim:
          claimName: sonar-pvc
---
# sonar service
apiVersion: v1
kind: Service
metadata:
  name: sonar
  namespace: sonar
  labels:
    app: sonar
    app.kubernetes.io/instance: sonarqube
spec:
  type: ClusterIP
  ports:
  - port: 9000
  selector:
    app: sonar
---
#
